--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+	background-color: #ddf9f1;
+	-webkit-background-size: cover;
+	 -moz-background-size: cover;
+	 -o-background-size: cover;
+	 background-size: cover;
+}
+
 .right {
 	float: right;
 }
@@ -29,4 +37,20 @@ div.debugbar .col {
 div.debugbar .col p {
 	margin: 0;
 	padding: 0;
+}
+
+div.content {
+	background-color: #bbf9bb;
+	padding: 50px;
+	margin: -250px;
+	margin-top: 0px;
+	box-shadow: 0px 50px 150px #000;
+}
+
+.table-color {
+	background-color: white;
+}
+
+.table-header {
+	background-color: #f3e6f2;
 }
